Update project logo

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/highlight.js/9.13.1/styles/lightfair.min.css"/>
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css"/>
+    <link href="static/styles-base.css" rel="stylesheet">
     <link href="static/styles.css" rel="stylesheet">
     <script type="text/javascript">
         window.heap = window.heap || [], heap.load = function (e, t) {
@@ -37,11 +38,8 @@
     <!-- TOP BAR -->
     <nav class="navbar navbar-expand bg-white mb-0 p-0 b-shadow" id="topNav">
         <div class="container-fluid m-0 p-0">
-            <div class="navbar-brand">
-                <a href="/"><img src="static/logo.png" alt="Logo"></a>
-                <div>
-                    <h1><a href="/">Helm Dashboard</a></h1>
-                </div>
+            <div class="navbar-brand me-0">
+                <a href="/"><img src="static/logo-header.svg" alt="Helm Dashboard"></a>
             </div>
 
             <div class="separator-vertical mx-3"><span></span></div>
