Remove version check for charts without repo (#54)
Co-authored-by: Harshit Mehta <harshitm@nvidia.com>

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -194,10 +194,14 @@
                             title="Uninstall the chart"><i class="bi-trash3"></i> Uninstall
                     </button>
                     <br/>
-                    <a class="link small" id="btnUpgradeCheck">Check for new version
+                    <a class="link small" id="btnUpgradeCheck">
                         <span class="spinner-border spinner-border-sm" style="display: none" role="status"
                               aria-hidden="true"></span>
                     </a>
+                    <div class="small" id="btnAddRepository">
+                        <span class="spinner-border spinner-border-sm" style="display: none" role="status"
+                              aria-hidden="true"></span>
+                    </div>
                 </div>
                 <div class="fs-2">&nbsp;</div>
             </div>
