Attempt to reuse the application if it's already running

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -198,10 +198,10 @@
                         <span class="spinner-border spinner-border-sm" style="display: none" role="status"
                               aria-hidden="true"></span>
                     </a>
-                    <div class="small" id="btnAddRepository">
+                    <a class="link small" id="btnAddRepository">
                         <span class="spinner-border spinner-border-sm" style="display: none" role="status"
                               aria-hidden="true"></span>
-                    </div>
+                    </a>
                 </div>
                 <div class="fs-2">&nbsp;</div>
             </div>
