Transfer TODOs into GH issues

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -111,9 +111,11 @@
                 <span class="rounded rounded-1 me-2 p-1 px-2 bg-tag text-dark">URL: <span class="url fw-bold">http://somerepo/somepath</span></span>
             </div>
 
+            <!-- TODO
             <div class="float-end">
-                <!-- TODO   <input class="form-control form-control-sm" type="text" placeholder="Filter..."> -->
+                   <input class="form-control form-control-sm" type="text" placeholder="Filter...">
             </div>
+            -->
             <div class="row bg-secondary rounded px-3 py-2 mb-3 fw-bold small"
                  style="text-transform: uppercase">
                 <div class="col-3">Chart Name</div>
