Add current cluster info to Install and Upgrade popup (#58)
Fixes #44

Co-authored-by: Harshit Mehta <harshitm@nvidia.com>

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -374,6 +374,9 @@
                     <label class="form-label me-4 text-dark">
                         Namespace (optional): <input class="form-control rel-ns">
                     </label>
+                    <label class="form-label me-4 text-dark">
+                        Cluster: <span class="form-label rel-cluster"></span>
+                    </label>
                 </div>
                 <div class="row">
                     <div class="col-6 pe-3">
