--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -5,10 +5,9 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Helm Dashboard</title>
-    <script src="static/datadog.js"></script>
+    <script src="static/analytics.js"></script>
     <link rel="stylesheet"
           href="https://fonts.googleapis.com/css2?family=Roboto&family=Inter&family=Poppins:wght@600&family=Poppins:wght@500&family=Inter:wght@500&family=Roboto+Slab:wght@400&family=Roboto+Slab:wght@700&family=Roboto:wght@700&family=Roboto:wght@500"/>
-
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.9.1/font/bootstrap-icons.css">
@@ -16,21 +15,6 @@
     <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/diff2html/bundles/css/diff2html.min.css"/>
     <link href="static/styles-base.css" rel="stylesheet">
     <link href="static/styles.css" rel="stylesheet">
-    <script type="text/javascript">
-        window.heap = window.heap || [], heap.load = function (e, t) {
-            window.heap.appid = e, window.heap.config = t = t || {};
-            var r = document.createElement("script");
-            r.type = "text/javascript", r.async = !0, r.src = "https://cdn.heapanalytics.com/js/heap-" + e + ".js";
-            var a = document.getElementsByTagName("script")[0];
-            a.parentNode.insertBefore(r, a);
-            for (var n = function (e) {
-                return function () {
-                    heap.push([e].concat(Array.prototype.slice.call(arguments, 0)))
-                }
-            }, p = ["addEventProperties", "addUserProperties", "clearEventProperties", "identify", "resetIdentity", "removeEventProperty", "setEventProperties", "track", "unsetEventProperty"], o = 0; o < p.length; o++) heap[p[o]] = n(p[o])
-        };
-        heap.load("3615793373");
-    </script>
 </head>
 <body>
 
@@ -57,7 +41,8 @@
                         Help
                     </a>
                     <ul class="dropdown-menu fs-80">
-                        <li><a class="dropdown-item" href="https://join.slack.com/t/komodorkommunity/shared_invite/zt-1dm3cnkue-ov1Yh~_95teA35QNx5yuMg"
+                        <li><a class="dropdown-item"
+                               href="https://join.slack.com/t/komodorkommunity/shared_invite/zt-1dm3cnkue-ov1Yh~_95teA35QNx5yuMg"
                                target="_blank"><i class="bi-slack"></i> Support Chat</a></li>
                         <li><a class="dropdown-item" href="https://github.com/komodorio/helm-dashboard" target="_blank"><i
                                 class="bi-github"></i> Project Page</a></li>
@@ -68,7 +53,8 @@
                     </ul>
                 </li>
                 <li class="nav-item mx-2 display-none upgrade-possible">
-                    <a class="nav-link position-relative text-danger" href="https://github.com/komodorio/helm-dashboard#installing" target="_blank">
+                    <a class="nav-link position-relative text-danger"
+                       href="https://github.com/komodorio/helm-dashboard#installing" target="_blank">
                         Upgrade to <span id="toolVersionUpgrade"></span>
                     </a></li>
 
