Add namespace dropdown (#67)
* add get namespace endpoint

* add namespace dropdown

* misc fix

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -355,7 +355,9 @@
                         Release Name: <input class="form-control rel-name">
                     </label>
                     <label class="form-label me-4 text-dark">
-                        Namespace (optional): <input class="form-control rel-ns">
+                        Namespace (optional):
+                    <input type="text" class="form-control rel-ns" list="ns-datalist"/>
+                    <datalist id="ns-datalist"></datalist>
                     </label>
                     <label class="form-label me-4 text-dark">
                         Cluster: <span class="form-label rel-cluster"></span>
