Few UI Enhancements (#79)
- Add Install/Upgrade keywork dynamically on popup
- Sort Repo list alphabetically
- Sort CLuster list alphabetically

Co-authored-by: Harshit Mehta <harshitm@nvidia.com>

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -343,7 +343,7 @@
         <div class="modal-content">
             <div class="modal-header">
                 <h4 class="modal-title" id="upgradeModalLabel">
-                    Install <b class='text-success name'></b>
+                    <span class="type"></span> <b class='text-success name'></b>
                 </h4>
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
