In-memory cache for speed-up (#88)
* Experiment with local cache

* Commit

* Cache all we can, invalidate later

* Commit

* separate cache class

* More cached

* Proper invalidate

* Complete the repos

* Fix the build

* Fix build

* Status reporting

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -49,6 +49,15 @@
                         <li>
                             <hr class="dropdown-divider">
                         </li>
+                        <li>
+                            <!-- TODO: this should go under the "user menu" -->
+                            <button class="dropdown-item" id="cacheClear"><i
+                                    class="bi-arrow-repeat"></i> Reset Cache
+                            </button>
+                        </li>
+                        <li>
+                            <hr class="dropdown-divider">
+                        </li>
                         <li><a class="dropdown-item disabled" href="#">Version <span id="toolVersion"></span></a></li>
                     </ul>
                 </li>
