Update Kommunity link (#184)

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -42,7 +42,7 @@
                     </a>
                     <ul class="dropdown-menu fs-80">
                         <li><a class="dropdown-item"
-                               href="https://join.slack.com/t/komodorkommunity/shared_invite/zt-1dm3cnkue-ov1Yh~_95teA35QNx5yuMg"
+                               href="https://komodorkommunity.slack.com"
                                target="_blank"><i class="bi-slack"></i> Support Chat</a></li>
                         <li><a class="dropdown-item" href="https://github.com/komodorio/helm-dashboard" target="_blank"><i
                                 class="bi-github"></i> Project Page</a></li>
