[WIP] Major release 1.0 (#147)
* Object model with self-sufficient binary (#131)

* Code cosmetics

* Experimenting with object model and direct HELM usage

* Experiment with object model

* replacing the kubectl

* Progressing

* Save the progress

* Able to start with migration in mind

* Migrated two pieces

* List releases via Helm

* Forgotten field

* Cristallized the problem of ctx switcher

* Reworked to multi-context

* Rollback is also new style

* More migration

* Refactoring

* Describe via code

* Bye-bye kubectl binary

* Eliminate more old code

* Refactor a bit

* Merges

* No binaries in dockerfile

* Commit

* Progress with getting the data

* Learned the thing about get

* One field less

* Sstart with repos

* Repo add

* repo remove

* Repos! Icons!

* Simplified access to data

* Ver listing works

* Ver check works

* Caching and values

* fixup

* Done with repos

* Working on install

* Install work-ish

* Fix UI failing on install

* Upgrade flow works

* Fix image building

* Remove outdated test file

* Move files around

* REfactorings

* Cosmetics

* Test for cache control (#151)

* Files import formatted

* Added go-test tools

* Added test for no-cache header

* added changes

* test for cache behaviour of app

* test for static route (#153)

* Tests: route configuration & context setter (#154)

* Test for route configuration

* Test for context setter middleware

* implemented changes

* Restore coverage profile

Fixes #156

* Cosmetics

* Test for `NewRouter` function (#157)

* Test for `configureScanners` (#158)

* Test for `configureKubectls` (#163)

* Test for repository loading (#169)

- Created `repos_test.go`
- Test: `Load()` of Repositories

* Build all PRs

* Fixes failing test (#171)

* Fixes failing test
- Fixes failing test of repo loading

* handles error for

* Did some changes

* 

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -54,7 +54,8 @@
                             <button class="dropdown-item" id="cacheClear"><i
                                     class="bi-arrow-repeat"></i> Reset Cache
                             </button>
-                        </li>
+                        <li><a class="dropdown-item" href="api-docs" target="_blank"><i
+                                class="bi-braces"></i> REST API</a></li>
                         <li>
                             <hr class="dropdown-divider">
                         </li>
@@ -194,7 +195,7 @@
                     <button id="btnRollback" class="btn btn-sm  btn-light bg-white border border-secondary me-2"
                             title="Rollback to this revision"><i class="bi-arrow-repeat"></i> <span>Rollback</span>
                     </button>
-                    <button id="btnTest" class="btn btn-sm btn-light bg-white  border border-secondary"
+                    <button id="btnTest" class="btn btn-sm btn-light bg-white  border border-secondary me-2 display-none"
                             title="Run tests for this chart"><i class="bi-check-circle"></i> <span>Run tests</span>
                     </button>
                     <button id="btnUninstall" class="btn btn-sm btn-light bg-white  border border-secondary"
@@ -367,14 +368,16 @@
                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
             <form class="modal-body border-bottom fs-5" enctype="multipart/form-data">
+                <input name="preview" type="hidden" class="preview-mode"/>
+                <input name="chart" type="hidden" class="chart-name"/>
                 <div class="input-group mb-3 text-muted">
                     <label class="form-label me-4 text-dark">Version to install: <select
-                            class='fw-bold text-success ver-new'></select></label> <span class="ver-old">(current version is <span
+                            class='fw-bold text-success ver-new' name="version"></select></label> <span class="ver-old">(current version is <span
                         class='text-success ms-1'>0.0.0</span>)</span>
                 </div>
                 <div class="input-group mb-3 text-muted">
                     <label class="form-label me-4 text-dark">
-                        Release Name: <input class="form-control rel-name">
+                        Release Name: <input class="form-control rel-name" name="name">
                     </label>
                     <label class="form-label me-4 text-dark">
                         Namespace (optional):
