Fix PVC+PV definition in chart

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -156,7 +156,7 @@
                 </div>
                 <div class="bg-secondary rounded-bottom m-0 row p-2">
                     <div class="col-4 hdr-name">Name</div>
-                    <div class="col-3">Chart Status</div>
+                    <div class="col-3">Release Status</div>
                     <div class="col-2">Chart</div>
                     <div class="col-1">Revision</div>
                     <div class="col-1">Namespace</div>
