Support working with local charts (#215)
* Basic functioning

* Support reconfiguring

* Improve tests coverage

* Always update local repo, don't offer to delete it

* Handle multi-repo correctly

* Document local charts usage

* Screenshot for docs

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -479,7 +479,7 @@
 <script src="static/actions.js"></script>
 <script src="static/scripts.js"></script>
 
-<!-- BANNER START -->
+<!-- BANNER START
 <a id="banner"
    href="https://helm-dashboard-survey.komodor.com/"
    class="display-none position-absolute top-0 start-50 translate-middle-x bg-primary text-light rounded px-2 mt-1 text-decoration-none py-1">Help
@@ -519,7 +519,7 @@
         $("#banner").hide()
     })
 </script>
-<!-- /BANNER END -->
+ /BANNER END -->
 
 </body>
 </html>
