Fix the values not considered correctly when loading the upgrade preview

--- a/pkg/dashboard/static/index.html
+++ b/pkg/dashboard/static/index.html
@@ -64,10 +64,9 @@
                 </li>
                 <li class="nav-item mx-2 display-none upgrade-possible">
                     <a class="nav-link position-relative text-danger"
-                       href="https://github.com/komodorio/helm-dashboard#installing" target="_blank">
+                       href="https://github.com/komodorio/helm-dashboard/releases" target="_blank">
                         Upgrade to <span id="toolVersionUpgrade"></span>
                     </a></li>
-
             </ul>
             <div>
                 <a class="btn" href="https://komodor.com/?utm_campaign=Helm-Dash&utm_source=helm-dash"><img
